--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: rlespinasse/github-slug-action@v4
     - name: Rancher Deploy
-      uses: sekassel-research/actions-rancher-update@1.1.4
+      uses: LATOKEN/actions-rancher-update@1.1.5
       with:
         rancher_url: ${{ secrets.RANCHER_URL_API }}
         rancher_access: ${{ secrets.RANCHER_ACCESS_KEY}}
@@ -20,3 +20,23 @@ jobs:
         stack_name: lachain-mainnet-backend-bridges-bridge-backend
         service_name: bridge-balancer
         docker_image: ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}:${{ env.GITHUB_REF_SLUG_URL }}
+    - name: Send release message to slack chat
+      id: slack
+      uses: slackapi/slack-github-action@v1.18.0
+      with:
+        payload: |
+          {
+            "text": "New release bridge-backend-service:${{ github.ref }} deployed to Mainnet by ${{ github.actor }}",
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "New release bridge-backend-service:${{ github.ref }} deployed to Mainnet by ${{ github.actor }}"
+                }
+              }
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.RELAYERS_SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
