--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -26,13 +26,13 @@ jobs:
       with:
         payload: |
           {
-            "text": "New release bridge-backend-service:${{ github.ref }} deployed to Mainnet by ${{ github.actor }}",
+            "text": "New release bridge-backend-service:${{ github.ref_name }} deployed to Mainnet by ${{ github.actor }}",
             "blocks": [
               {
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "New release bridge-backend-service:${{ github.ref }} deployed to Mainnet by ${{ github.actor }}"
+                  "text": "New release bridge-backend-service:${{ github.ref_name }} deployed to Mainnet by ${{ github.actor }}"
                 }
               }
             ]
