--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: rlespinasse/github-slug-action@v4
     - name: Rancher Deploy
-      uses: LATOKEN/actions-rancher-update@1.1.5
+      uses: LATOKEN/actions-rancher-update@1.1.6
       with:
         rancher_url: ${{ secrets.RANCHER_URL_API }}
         rancher_access: ${{ secrets.RANCHER_ACCESS_KEY}}
@@ -18,6 +18,7 @@ jobs:
         stack_name: lachain-mainnet-backend-bridges-bridge-backend
         service_name: bridge-backend
         docker_image: ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}:${{ env.GITHUB_REF_SLUG_URL }}
+        pull: true
         retry: 190
         timeout: 1
     - name: Send release message to slack chat
