--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: rlespinasse/github-slug-action@v4
     - name: Rancher Deploy
-      uses: LATOKEN/actions-rancher-update@1.1.5
+      uses: LATOKEN/actions-rancher-update@1.1.6
       with:
         rancher_url: ${{ secrets.TEST_RANCHER_URL_API }}
         rancher_access: ${{ secrets.TEST_RANCHER_ACCESS_KEY}}
@@ -17,6 +17,7 @@ jobs:
         service_name: bridge-backend
         docker_image: ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER_PART_SLUG }}/${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG }}:${{ env.GITHUB_REF_SLUG_URL }}
         retry: 190
+        pull: true
         timeout: 1
     - name: Send release message to slack chat
       id: slack
